# rtltool

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  rtltool.py  shell.nix
rtl8762c/: __main__.py  commands.py  operations.py  rtl8762c.py
