[tool.poetry]
name = "rtltool"
version = "0.1.0"
description = ""
authors = ["marble <git@computer-in.love>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
crccheck = "^1.3.0"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
